--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
+    "@types/jsonwebtoken": "^8.5.1",
     "@types/node": "^14.14.35",
     "@types/uuid": "^8.3.0",
     "@types/validator": "^13.1.3",
