--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon server.ts"
+    "start": "nodemon server.ts",
+    "web-start": "cd ../web && npm start",
+    "all": "concurrently \"npm start\" \" npm run web-start\""
   },
   "keywords": [],
   "author": "",
@@ -26,6 +28,7 @@
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
     "@types/jsonwebtoken": "^8.5.1",
+    "concurrently": "^6.0.0",
     "@types/node": "^14.14.35",
     "@types/uuid": "^8.3.0",
     "@types/validator": "^13.1.3",
