--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "nodemon server.ts",
     "web-start": "cd ../web && npm start",
-    "all": "concurrently \"npm start\" \" npm run web-start\""
+    "all": "concurrently \"npm start\" \" npm run web-start\"",
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
